--- a/references.bib
+++ b/references.bib
@@ -475,3 +475,14 @@ url={https://books.google.com/books?id=ZXL6AQAAQBAJ}
   year={2007},
   publisher={Cambridge University Press}
 }
+
+@article{King_Nielsen_2019,
+  title={Why Propensity Scores Should Not Be Used for Matching},
+  volume={27},
+  DOI={10.1017/pan.2019.11},
+  number={4},
+  journal={Political Analysis},
+  author={King, Gary and Nielsen, Richard},
+  year={2019},
+  pages={435–454}
+  } 
