--- a/decisions_first.qmd
+++ b/decisions_first.qmd
@@ -52,6 +52,7 @@ glossary_add(term = "Meaningful threshold",
 
 ```
 
+![Decisions First](img/decisions_first.png){.lightbox}
 
 In the world of `r glossary("data-driven")` decision-making, it's all too easy to
 fall into the trap of the "null ritual." This ritual, as @gigerenzer2004null
