--- a/references.bib
+++ b/references.bib
@@ -486,3 +486,51 @@ url={https://books.google.com/books?id=ZXL6AQAAQBAJ}
   year={2019},
   pages={435–454}
   } 
+  
+@article{rubin1984bayesianly,
+  author = {Donald B. Rubin},
+  title = {{Bayesianly Justifiable and Relevant Frequency Calculations for the Applied Statistician}},
+  volume = {12},
+  journal = {The Annals of Statistics},
+  number = {4},
+  publisher = {Institute of Mathematical Statistics},
+  pages = {1151 -- 1172},
+  keywords = {62-07, Calibration, Empirical Bayes, inference, model monitoring, operating characteristics, posterior predictive checks, Stopping rules},
+  year = {1984},
+  doi = {10.1214/aos/1176346785},
+  URL = {https://doi.org/10.1214/aos/1176346785}
+} 
+
+@article{kruschke2018bayesian,
+  title={Bayesian data analysis for newcomers},
+  author={Kruschke, John K and Liddell, Torrin M},
+  journal={Psychonomic bulletin \& review},
+  volume={25},
+  number={1},
+  pages={155--177},
+  year={2018},
+  doi = {10.3758/s13423-017-1272-1},
+  publisher={Springer}
+}
+
+@book{gelman2013bayesian,
+  title={Bayesian Data Analysis, Third Edition},
+  author={Gelman, A. and Carlin, J.B. and Stern, H.S. and Dunson, D.B. and Vehtari, A. and Rubin, D.B.},
+  isbn={9781439840955},
+  lccn={2013039507},
+  series={Chapman \& Hall/CRC Texts in Statistical Science},
+  url={http://www.stat.columbia.edu/~gelman/book/},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@book{mcelreath2018statistical,
+  title={Statistical Rethinking: A Bayesian Course with Examples in R and Stan},
+  author={McElreath, R.},
+  isbn={9781315362618},
+  lccn={2015032008},
+  series={Chapman \& Hall/CRC Texts in Statistical Science},
+  url={https://books.google.com/books?id=T3FQDwAAQBAJ},
+  year={2018},
+  publisher={CRC Press}
+}
