--- a/references.bib
+++ b/references.bib
@@ -534,3 +534,12 @@ url={https://books.google.com/books?id=ZXL6AQAAQBAJ}
   year={2018},
   publisher={CRC Press}
 }
+
+@Manual{shinylive,
+  title = {shinylive: Run 'shiny' Applications in the Browser},
+  author = {Barret Schloerke and Winston Chang and George Stagg and Garrick Aden-Buie},
+  year = {2024},
+  note = {R package version 0.2.0,
+    https://github.com/posit-dev/r-shinylive},
+  url = {https://posit-dev.github.io/r-shinylive/},
+}
